Test/dafny0/OnDemandResolutionCycle.dfy.expect
OnDemandResolutionCycle.dfy(4,5): Error: PRE-TYPE: Cyclic dependency among declarations: A -> a -> A
OnDemandResolutionCycle.dfy(7,5): Error: PRE-TYPE: Cyclic dependency among declarations: B -> FB -> B
OnDemandResolutionCycle.dfy(14,8): Error: PRE-TYPE: Cyclic dependency among declarations: D -> d -> D
OnDemandResolutionCycle.dfy(17,8): Error: PRE-TYPE: Cyclic dependency among declarations: E -> FE -> E
OnDemandResolutionCycle.dfy(21,8): Error: PRE-TYPE: Cyclic dependency among declarations: F -> f -> F
OnDemandResolutionCycle.dfy(11,6): Error: PRE-TYPE: Cyclic dependency among declarations: c0 -> c1 -> c0
6 resolution/type errors detected in OnDemandResolutionCycle.dfy
